--- a/examples/workflow-glsp/package.json
+++ b/examples/workflow-glsp/package.json
@@ -32,7 +32,8 @@
   "devDependencies": {
     "mvn-artifact-download": "5.1.0",
     "rimraf": "^2.6.1",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.2",
+    "tslib": "2.3.1"
   },
   "scripts": {
     "prepare": "yarn clean && yarn build && yarn lint",
