--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -40,7 +40,8 @@
     "@types/uuid": "3.4.5",
     "@babel/runtime": "^7.11.2",
     "rimraf": "^2.6.1",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.2",
+    "tslib": "2.3.1"
   },
   "scripts": {
     "prepare": "yarn clean && yarn build && yarn lint",
