--- a/examples/workflow-glsp/tsconfig.json
+++ b/examples/workflow-glsp/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../configs/base.tsconfig",
+  "extends": "@eclipse-glsp/ts-config/tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "lib",
