--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,11 +6,7 @@
       "request": "launch",
       "name": "Run current test",
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-      "args": [
-        "--opts",
-        "${workspaceFolder}/configs/mocha.opts",
-        "${file}"
-      ],
+      "args": ["--opts", "${workspaceFolder}/configs/mocha.opts", "${file}"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen"
     },
@@ -19,11 +15,7 @@
       "request": "launch",
       "name": "Run all tests",
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-      "args": [
-        "--opts",
-        "${workspaceFolder}/configs/mocha.opts",
-        "${workspaceFolder}/src/**/*.spec.ts"
-      ],
+      "args": ["--opts", "${workspaceFolder}/configs/mocha.opts", "${workspaceFolder}/src/**/*.spec.ts"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen"
     }
