--- a/examples/workflow-glsp/package.json
+++ b/examples/workflow-glsp/package.json
@@ -38,7 +38,7 @@
     "prepare": "yarn clean && yarn build && yarn lint",
     "clean": "rimraf lib",
     "build": "tsc",
-    "lint": "eslint -c ./.eslintrc.js --ext .ts,.tsx ./src",
+    "lint": "eslint -c .eslintrc.js --ext .ts,.tsx ./src",
     "watch": "tsc -w"
   },
   "files": [
