--- a/examples/workflow-standalone/package.json
+++ b/examples/workflow-standalone/package.json
@@ -56,7 +56,7 @@
   "scripts": {
     "prepare": "yarn clean && yarn build && yarn lint",
     "clean": "rimraf lib app/bundle.js app/bundle.js.map app/css",
-    "lint": "eslint -c ./.eslintrc.js --ext .ts,.tsx ./src",
+    "lint": "eslint -c .eslintrc.js --ext .ts,.tsx ./src",
     "build": "tsc && webpack",
     "watch": "tsc -w -p ./tsconfig.json"
   },
