--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -43,10 +43,10 @@
     "typescript": "^3.9.2"
   },
   "scripts": {
-    "prepare": "yarn clean && yarn build && yarn lint",
+    "prepare": "yarn clean && yarn build && yarn lint ",
     "clean": "rimraf lib",
     "build": "tsc",
-    "lint": "eslint -c ./.eslintrc.js --ext .ts ./src",
+    "lint": "eslint -c .eslintrc.js --ext .ts ./src",
     "watch": "tsc -w"
   },
   "publishConfig": {
